--- a/build.yaml
+++ b/build.yaml
@@ -8,8 +8,7 @@
 # board: [ "nice_nano_v2" ]
 # shield: [ "corne_left", "corne_right" ]
 # include:
-#   - board: bdn9_rev2
-#   - board: nice_nano_v2
+#   - board: bdn9_rev2 #   - board: nice_nano_v2
 #     shield: reviung41
 #   - board: nice_nano_v2
 #     shield: corne_left
@@ -19,6 +18,8 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: cradio_left
+    # shield: cradio_left
+    shield: cradio_left nice_view_adapter nice_view
   - board: nice_nano_v2
-    shield: cradio_right
+    # shield: cradio_right
+    shield: cradio_right nice_view_adapter nice_view
