--- a/build.yaml
+++ b/build.yaml
@@ -18,8 +18,8 @@
 ---
 include:
   - board: nice_nano_v2
-    # shield: cradio_left
-    shield: cradio_left nice_view_adapter nice_view
+    # shield: corn_left
+    shield: corn_left nice_view_adapter nice_view
   - board: nice_nano_v2
-    # shield: cradio_right
-    shield: cradio_right nice_view_adapter nice_view
+    # shield: corn_right
+    shield: corn_right nice_view_adapter nice_view
