--- a/build.yaml
+++ b/build.yaml
@@ -19,7 +19,7 @@
 include:
   - board: nice_nano_v2
     # shield: corn_left
-    shield: corn_left nice_view_adapter nice_view
+    shield: corne_left nice_view_adapter nice_view
   - board: nice_nano_v2
     # shield: corn_right
-    shield: corn_right nice_view_adapter nice_view
+    shield: corne_right nice_view_adapter nice_view
